# ADAS

./: .gitignore  1.sh  ADAS.service  CMakeLists.txt  a.out  adas.config  bar.py  install.bash  readme.md
src/: main.cpp
src/lib/barcode/: barcode.cpp  barcode.h
src/lib/keyboard/: keyboard.cpp  keyboard.h
src/lib/lcdi2c/: lcd_rus_font.h  lcdi2c.cpp  lcdi2c.h
src/lib/log/: log.cpp  log.h
src/lib/prog/: prog.cpp  prog.h
